--- a/changeroom3.html
+++ b/changeroom3.html
@@ -24,29 +24,19 @@
       margin-bottom: 5px;
     }
 
-    h2 {
-      text-align: center;
-      font-size: 14px;
-      margin: 10px 0 5px 0;
-    }
-
     .grid {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      gap: 6px 10px;
-      justify-items: center;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
       margin-bottom: 20px;
-    }
-
-    .exit-grid {
-      grid-template-columns: repeat(3, 1fr);
     }
 
     .image-box {
       position: relative;
       width: 140px;
       height: 180px;
-      padding: 10px;
+	  margin:10px;
     }
 
     .image-box img {
@@ -58,7 +48,7 @@
 
     .step-number {
       position: absolute;
-      top: 20px;
+      top: 10px;
       right: 10px;
       background: #000;
       color: #fff;
@@ -73,7 +63,7 @@
       font-weight: bold;
       margin-top: 30px;
       text-align: left;
-      margin-left: 22px;
+      margin-left: 42px;
     }
   </style>
 </head>
@@ -82,23 +72,28 @@
   <h1 class="footer">Annexure – 3: Visitors Change Room Pictorial Diagram</h1>
   <h1>ENTRY</h1>
 
+  <!-- ENTRY Images (3 + 3 + 2 layout) -->
   <div class="grid">
     <div class="image-box"><img src="https://i.ibb.co/6qmrzFs/Whats-App-Image-2025-07-04-at-22-43-04-2a7ac753.jpg"><div class="step-number">1</div></div>
-    <div class="image-box"><img src="https://i.ibb.co/Y7hD9wv9/Whats-App-Image-2025-07-04-at-22-43-04-5b977726.jpg"><div class="step-number">2</div></div>
+    <div class="image-box"><img src="https://i.ibb.co/QFTVFs9B/Whats-App-Image-2025-07-04-at-22-43-05-79faa9ba.jpg"><div class="step-number">2</div></div>
     <div class="image-box"><img src="https://i.ibb.co/d4kPWTQz/Whats-App-Image-2025-07-04-at-22-43-04-c411efe6.jpg"><div class="step-number">3</div></div>
+
     <div class="image-box"><img src="https://i.ibb.co/Hjn4Y3x/Whats-App-Image-2025-07-04-at-22-43-05-9279dfc3.jpg"><div class="step-number">4</div></div>
+    <div class="image-box"><img src="https://i.ibb.co/hSgRJZZ/Whats-App-Image-2025-07-04-at-22-44-43-d3349b2a.jpg"><div class="step-number">5</div></div>
+    <div class="image-box"><img src="https://i.ibb.co/mrfF3KkM/Whats-App-Image-2025-07-04-at-22-44-43-674919ce.jpg"><div class="step-number">6</div></div>
 
-    <div class="image-box"><img src="https://i.ibb.co/fV3T184c/Whats-App-Image-2025-07-04-at-22-43-05-e48e6878.jpg"><div class="step-number">5</div></div>
-    <div class="image-box"><img src="https://i.ibb.co/hSgRJZZ/Whats-App-Image-2025-07-04-at-22-44-43-d3349b2a.jpg"><div class="step-number">6</div></div>
-    <div class="image-box"><img src="https://i.ibb.co/mrfF3KkM/Whats-App-Image-2025-07-04-at-22-44-43-674919ce.jpg"><div class="step-number">7</div></div>
-    <div class="image-box"><img src="https://i.ibb.co/HDGV9qrg/Whats-App-Image-2025-07-04-at-22-44-44-0c871019.jpg"><div class="step-number">8</div></div>
+    <div class="image-box"><img src="https://i.ibb.co/HDGV9qrg/Whats-App-Image-2025-07-04-at-22-44-44-0c871019.jpg"><div class="step-number">7</div></div>
+    <div class="image-box"><img src="https://i.ibb.co/hFR5hXQV/Whats-App-Image-2025-07-04-at-22-44-44-1c65f5e4.jpg"><div class="step-number">8</div></div>
+  </div>
 
-    <div class="image-box"><img src="https://i.ibb.co/hFR5hXQV/Whats-App-Image-2025-07-04-at-22-44-44-1c65f5e4.jpg"><div class="step-number">9</div></div>
-    <div class="image-box"><img src="https://i.ibb.co/TqDCV3j6/Whats-App-Image-2025-07-04-at-22-51-56-362ee327.jpg"><div class="step-number">10</div></div>
+  <!-- Last image of entry in new line -->
+  <div class="grid">
+    <div class="image-box"><img src="https://i.ibb.co/TqDCV3j6/Whats-App-Image-2025-07-04-at-22-51-56-362ee327.jpg"><div class="step-number">9</div></div>
   </div>
 
   <h1>EXIT</h1>
-  <div class="grid exit-grid">
+
+  <div class="grid">
     <div class="image-box"><img src="https://i.ibb.co/Qj3RNZyT/Whats-App-Image-2025-07-04-at-22-52-49-65edd9d4.jpg"><div class="step-number">1</div></div>
     <div class="image-box"><img src="https://i.ibb.co/tPFKcdrC/Whats-App-Image-2025-07-04-at-22-52-50-0cdc4d89.jpg"><div class="step-number">2</div></div>
     <div class="image-box"><img src="https://i.ibb.co/LhqFkVF1/Whats-App-Image-2025-07-04-at-22-52-50-8e786c0a.jpg"><div class="step-number">3</div></div>
